# gptplayer-pbeauty

./: README.md  main.py  pyproject.toml  sample.json
src/gptplayer_pbeauty/: __init__.py  __main__.py  core.py
