[project]
name = "gptplayer-pbeauty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fausto Urrutia", email = "41218224+faustourrutiareyes@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.108.1",
]

[project.scripts]
gptplayer-pbeauty = "gptplayer_pbeauty__main__:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
